data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_729.wast
;; 10. **Test Description**: A loop that uses nested conditions in `br_if`, with a break dependent on both arithmetic and boolean evaluations. Check if the loop logic properly adheres to nested condition results.    - **Constraint**: Ensures `br_if` accurately handles nested arithmetic and boolean condition evaluations.    - **Differential Behavior**: Incorrectly executed loop logic due to improper handling of nested conditions, resulting in false breaks or infinite loops.

(assert_invalid
  (module
    (func (param i32) (result i32) 
      (local i32)
      (loop (result i32)
        (local.get 0)
        (i32.const 1)
        (i32.add)
        (local.tee 1)
        (i32.const 10)
        (i32.lt_s)
        (br_if 0)
        (i32.const 0)
        (return)
      )
    )
  )
  "type mismatch"
)